# Canon

./: .gitignore  AGENTS.md  CLAUDE.md  LegalKernel.lean  Main.lean  README.md  Replay.lean  Tests.lean  lake-manifest.json  lakefile.lean
.github/workflows/: ci-rust.yml  ci.yml
Deployments/Examples/: UsdClearing.lean
LegalKernel/: Conservation.lean  Kernel.lean  RBMapLemmas.lean
LegalKernel/Authority/: Action.lean  LocalPolicy.lean  LocalPolicySemantics.lean  Nonce.lean  SignedAction.lean
LegalKernel/Bridge/: Accounting.lean  AddressBook.lean  Admissible.lean  BridgeActor.lean  Finalisation.lean  Ingest.lean  State.lean  WithdrawalProof.lean  WithdrawalRoot.lean
LegalKernel/DSL/: LexDeployment.lean  LexImplCalculus.lean  LexImplLowering.lean  LexLaw.lean  LexPreGrammar.lean
LegalKernel/Disputes/: Evidence.lean  MonotonicDeployment.lean  Types.lean
LegalKernel/Encoding/: Action.lean  BridgeInjective.lean  GameState.lean  KernelStep.lean  LocalPolicy.lean  LocalPolicyInjective.lean  State.lean  StateInjective.lean
LegalKernel/Events/: Extract.lean  Types.lean
LegalKernel/FaultProof/: Cell.lean  Coherence.lean  Commit.lean  Convergence.lean  DisputeConfig.lean  Game.lean  Honesty.lean  KeyDerivation.lean  LawClassification.lean  MigrationFreeze.lean  MissingTheorems.lean  Observer.lean  Settlement.lean  Smt.lean  SolidityStepVMCommit.lean  Step.lean  StepVariants.lean  Strategy.lean  SubStep.lean  TypedCellProof.lean  Verify.lean  Witness.lean
LegalKernel/Laws/: Burn.lean  Deposit.lean  Dispute.lean  DistributeOthers.lean  Freeze.lean  LocalPolicy.lean  Mint.lean  ProportionalDilute.lean  RegisterIdentity.lean  ReplaceKey.lean  Reward.lean  Transfer.lean  Withdraw.lean
LegalKernel/LocalPolicy/: LawClassification.lean
LegalKernel/Runtime/: Hash.lean  LogFile.lean  Loop.lean  Replay.lean  Snapshot.lean
LegalKernel/Test/: Framework.lean  KernelTests.lean  RBMapLemmasTests.lean  Umbrella.lean
LegalKernel/_lex_inputs/: legalkernel_burn.json  legalkernel_declareLocalPolicy.json  legalkernel_deposit.json  legalkernel_dispute.json  legalkernel_disputeWithdraw.json  legalkernel_distributeOthers.json  legalkernel_freezeResource.json  legalkernel_mint.json  legalkernel_proportionalDilute.json  legalkernel_registerIdentity.json  legalkernel_replaceKey.json  legalkernel_revokeLocalPolicy.json  legalkernel_reward.json  legalkernel_rollback.json  legalkernel_transfer.json  legalkernel_verdict.json  legalkernel_withdraw.json
Lex/Test/: ExampleLex.lean  M2.lean
Tools/: Common.lean  CountSorries.lean  LexCodegen.lean  LexCommon.lean  LexDiff.lean  LexFormat.lean  NamingAudit.lean  TcbAudit.lean
docs/: GENESIS_PLAN.md  abi.md  actor_scoped_policies_plan.md  audit_remediation_plan.md  canon_vs_l2_analysis.md  chain_level_accounting_plan.md  cleanup_and_consolidation_plan.md  deferred_work_index.md  encoder_injectivity_plan.md  ethereum_integration_plan.md  ethereum_workstream_g_plan.md  extraction_notes.md  fault_proof_design.md  fault_proof_migration_plan.md  fault_proof_runbook.md  law_language_design.md  lex_amendment_walkthrough.md  lex_implementation_plan.md  lex_v2_v3_roadmap_plan.md  open_questions.md  parameterized_laws_landing_plan.md  phase_7_plan.md  rust_host_runtime_plan.md  smt_cell_proofs_plan.md  std_dependencies.md
docs/planning/: audit_remediation_plan.md  deferred_work_index.md  encoder_injectivity_plan.md  rust_host_runtime_plan.md  smt_cell_proofs_plan.md
runtime/: Cargo.toml  README.md  rust-toolchain.toml
runtime/canon-bench/: Cargo.toml
runtime/canon-bench/src/: fixture.rs  histogram.rs  lib.rs  report.rs  runner.rs
runtime/canon-bench/tests/: smoke.rs
runtime/canon-cli-common/: Cargo.toml
runtime/canon-cli-common/src/: exit.rs  lib.rs  logging.rs  paths.rs
runtime/canon-cross-stack/: Cargo.toml
runtime/canon-cross-stack/src/: lib.rs
runtime/canon-cross-stack/tests/: integration.rs
runtime/canon-event-subscribe/: Cargo.toml
runtime/canon-event-subscribe/src/: event_cache.rs  main.rs  server.rs  tail.rs
runtime/canon-event-subscribe/tests/: integration.rs
runtime/canon-faultproof-observer/: Cargo.toml
runtime/canon-faultproof-observer/src/: config.rs  error.rs  events.rs  game.rs  lib.rs  main.rs  observer.rs  persistence.rs  state_reader.rs  strategy.rs  submitter.rs  watcher.rs
runtime/canon-faultproof-observer/tests/: chaos.rs  integration.rs  observer_game_traces.rs  property.rs  state_reader_integration.rs
runtime/canon-hash-keccak256/: Cargo.toml  build.rs
runtime/canon-hash-keccak256/examples/: gen_keccak256_fixtures.rs
runtime/canon-hash-keccak256/src/: hash.rs  lib.rs
runtime/canon-hash-keccak256/tests/: integration.rs  known_vectors.rs  property.rs
runtime/canon-host/: Cargo.toml
runtime/canon-host/src/: kernel.rs  lib.rs  listener.rs  main.rs  server.rs  tls.rs  verdict.rs
runtime/canon-host/tests/: integration.rs
runtime/canon-indexer/: Cargo.toml
runtime/canon-indexer/src/: daemon.rs  main.rs
runtime/canon-indexer/tests/: daemon_loop.rs
runtime/canon-l1-ingest/: Cargo.toml
runtime/canon-l1-ingest/src/: address_book.rs  encoding.rs  events.rs  fixture.rs  key.rs  lib.rs  main.rs  reorg.rs  source.rs  state.rs  submitter.rs  translation.rs  watcher.rs
runtime/canon-l1-ingest/tests/: cross_stack.rs  integration.rs
runtime/canon-storage/: Cargo.toml
runtime/canon-storage/src/: lib.rs  sqlite.rs
runtime/canon-verify-secp256k1/: Cargo.toml  build.rs
runtime/canon-verify-secp256k1/examples/: gen_ecdsa_fixtures.rs
runtime/canon-verify-secp256k1/src/: lib.rs  verify.rs
runtime/canon-verify-secp256k1/tests/: known_vectors.rs
runtime/tests/cross-stack/: README.md
scripts/: setup.sh
solidity/: .gitignore  README.md  foundry.toml
solidity/script/: ComputeEmptyHashes.s.sol  DeployFaultProof.s.sol
solidity/scripts/: vendor-deps.sh
solidity/test/: CBEDecode.t.sol  CREATE3.t.sol  CanonBridge.t.sol  CanonDisputeVerifier.t.sol  CanonDisputeVerifierV2.t.sol  CanonFaultProofGame.t.sol  CanonIdentityRegistry.t.sol  CanonMigration.t.sol  CanonSequencerStake.t.sol  (+4 more)
(+106 files in other folders)
