# Canon  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `canon-bench` — RH-F skeleton.  The implementing work unit (RH-F)
# lands the Criterion benchmark suite measuring `canon-host` /
# `canon` transfer throughput end-to-end (target ≥ 10k tx/sec,
# p99 < 10 ms).  See `docs/planning/rust_host_runtime_plan.md` §RH-F.

[package]
name = "canon-bench"
description = "Canon transfer-throughput benchmark suite (RH-F skeleton)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
