# Canon  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `canon-indexer` — RH-E.1 skeleton.  The implementing work unit
# materialises the SQLite indexer that consumes events via
# `canon-event-subscribe` and maintains per-resource balance views
# in `canon-storage`.  See
# `docs/planning/rust_host_runtime_plan.md` §RH-E.1.

[package]
name = "canon-indexer"
description = "Canon SQLite event indexer (RH-E.1 skeleton)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "canon-indexer"
path = "src/main.rs"

[dependencies]
canon-cli-common = { workspace = true }
canon-storage = { path = "../canon-storage" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
