# Canon  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `canon-storage` — RH-E.0 skeleton.  The implementing work unit
# (RH-E.0.{a,b,c,d,e}) lands the Rust DB abstraction (Storage trait
# + SQLite-backed implementation + snapshot API + migration
# scaffolding) shared by `canon-indexer` and `canon-faultproof-
# observer`.  See `docs/planning/rust_host_runtime_plan.md` §RH-E.0.

[package]
name = "canon-storage"
description = "Storage abstraction for the Canon Rust host workspace (RH-E.0 skeleton)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
