# Canon  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `canon-verify-secp256k1` — RH-A.1 skeleton.  The implementing work
# unit (RH-A.1.{a,b,c,d}) lands the cdylib that exposes the
# `canon_verify_ecdsa` C symbol against which Lean's
# `Authority.Crypto.Verify` opaque links at runtime.  See
# `docs/planning/rust_host_runtime_plan.md` §RH-A.1.
#
# RH-H ships only the workspace skeleton; the cdylib build target,
# the k256 dependency, and the actual ECDSA-verification logic are
# all part of the implementing WU.  See `src/lib.rs` for the
# documented future surface.

[package]
name = "canon-verify-secp256k1"
description = "ECDSA secp256k1 verification adaptor for the Canon Lean kernel (RH-A.1 skeleton)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
